# hackweek-servicegraph

./: .gitignore  CNAME  Makefile  README.md  docker-compose.yml  index.html  requirements.txt  schema.sql
frontend/: package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  ErrorBoundary.tsx  GraphChart.tsx  RangeSliderComponent.tsx  ServiceGraph.tsx  colors.tsx  index.tsx  timeslider.js  types.tsx  useWindowSize.tsx
frontend/src/assets/: styles.css  tailwind.css
python/: hello.py  locustfile.py  minimal.py  provider_names.py  servicegraph_sdk.py  test-apps.config.yml  test-apps.py  test-server.py
python/sample_data/: README.md  adjectives.txt  animals.txt  gen_data.py
rust/servicegraph-api/: Cargo.toml  README.md  Rocket.toml
rust/servicegraph-api/src/: db.rs  endpoints.rs  error.rs  main.rs  payloads.rs  registry.rs
rust/servicegraph-api/src/payloads/: mod.rs
service-graph-register-host/src/: main.py
