[package]
name = "servicegraph-api"
version = "0.1.0"
edition = "2018"


[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clickhouse-rs = "0.1.21"
clickhouse = { version = "0.8", features = ["test-util"] }
tokio = { version = "1.0.1", features = ["rt", "macros"] }
uuid = { version = "0.8", features = ["serde", "v5"] }

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]
