[package]
name = "servicegraph-api"
version = "0.1.0"
edition = "2018"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.0.1", features = ["rt", "macros"] }
uuid = { version = "0.8.2", features = ["serde", "v4", "v5"] }
clickhouse-rs = "1.0.0-alpha.1"
chrono = { version = "0.4.19", features = ["serde"] }
chrono-tz = { version = "0.5.3", features = ["serde"] }
lazy_static = "1.4.0"
anyhow = "1.0.42"
rand = "0.8.4"
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", rev = "5843861a88958c16bfaa0b40f0d8910772bcd2f6" }

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]
